<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sign Up Form</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username: </string>
    <string name="username_hint">Enter a username</string>
    <string name="password_label">Password: </string>
    <string name="password_hint">Enter a password</string>
    <string name="confirm_label">Confirm: </string>
    <string name="confirm_hint">Confirm your password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome_placeholder">Welcome, User!</string>
    <string name="amount_hint">Please enter an amount</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="string_placeholder">Your Account\'s Balance</string>

</resources>
