<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/main_layout"
                tools:context=".LoginActivity">

    <LinearLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/username_label"
                    android:textSize="20sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/username_input"
                    android:hint="@string/username_hint"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/password_label"
                    android:textSize="20sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/password_input"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/confirm_label"
                    android:textSize="20sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/confirm_input"
                    android:hint="@string/confirm_hint"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/submit_button"
            android:text="@string/sign_up_button"
            android:layout_alignParentRight="true"
            android:layout_below="@id/fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>