<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center"
              tools:context=".MainActivity"
        >

    <EditText
            android:id="@+id/input_amount"
            android:gravity="center"
            android:hint="@string/amount_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <Button
                android:id="@+id/deposit_button"
                android:text="@string/deposit"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />

        <Button
                android:id="@+id/withdraw_button"
                android:text="@string/withdraw"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
    <TextView
            android:id="@+id/amount_display"
            android:textSize="25sp"
            android:text="@string/string_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

</LinearLayout>
